// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染TabHeader 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(0,0,0,0.12);
  font-size: 1rem;
  color: rgba(0,0,0,0.87);
}

.c0 .sinoui-tab-label-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  z-index: 1;
}

.c0 .sinoui-tab-list {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
}

.c0 .sinoui-tab-labels {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c0 .sinoui-tab-header-extra-content {
  line-height: 48px;
}

.c1 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="sinoui-tab-label-container"
  >
    <div
      className="sinoui-tab-list"
    >
      <div
        className="sinoui-tab-labels"
      >
        <div
          className="sinoui-tab-label"
        >
          标签内容1
        </div>
        <div
          className="sinoui-tab-label sinoui-tab-label-active"
        >
          标签内容2
        </div>
      </div>
      <div
        className="c1 sinoui-ink-bar"
        data-testid="inkbar"
      />
    </div>
  </div>
</div>
`;

exports[`附件内容 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(0,0,0,0.12);
  font-size: 1rem;
  color: rgba(0,0,0,0.87);
}

.c0 .sinoui-tab-label-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  z-index: 1;
}

.c0 .sinoui-tab-list {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
}

.c0 .sinoui-tab-labels {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c0 .sinoui-tab-header-extra-content {
  line-height: 48px;
}

.c1 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="sinoui-tab-label-container"
  >
    <div
      className="sinoui-tab-list"
    >
      <div
        className="sinoui-tab-labels"
      >
        <div
          className="sinoui-tab-label"
        >
          标签内容1
        </div>
        <div
          className="sinoui-tab-label sinoui-tab-label-active"
        >
          标签内容2
        </div>
      </div>
      <div
        className="c1 sinoui-ink-bar"
        data-testid="inkbar"
      />
    </div>
    <div
      className="sinoui-tab-header-extra-content"
    >
      <div>
        附件内容
      </div>
    </div>
  </div>
</div>
`;
